# parallel-prefix-sum

./: .gitignore  CMakeLists.txt  README  README.md  main.cpp
